added allure report https://docs.qameta.io/allure/#_testng